spacing issue resolved, fixes #2163

--- a/app/stylesheets/ui_base/_base.sass
+++ b/app/stylesheets/ui_base/_base.sass
@@ -562,6 +562,8 @@ button.icon_16
   +columns(10,14)
   width: 540px
   margin: 0
+  h1
+    line-height: 1.4
 #main-content-right
   float: right
   margin-top: 14px
